testsuite/tests/parser/should_fail/pfail046.alan
hello() : proc
{
  if(0 | 1)
    return;
}
