testsuite/tests/parser/should_fail/pfail046.stderr
pfail046.alan:3:10: Error: Parse error on input `1'
	Cannot use conditional symbols in expressions

